# virtual-memory-allocator

./: CMakeLists.txt  README.md  report.md
src/: mem.c  mem.h  mem_internals.c  mem_internals.h  mem_large.c  mem_medium.c  mem_small.c  memshell.c
tests/: test_buddy.cc  test_generic.cc  test_mark.cc  test_overflow.c  test_run.H  test_run_cpp.cc  test_run_cpp.h
